--- a/css/creative.css
+++ b/css/creative.css
@@ -1,21 +1,35 @@
 /* Menú */
 header{
-	border-bottom: 1px solid rgba(255, 255, 255, 0.65);
+	width: 100%;
 	position: fixed;
 	z-index: 10;
-	width: 100%;
-	color: white;
-	background-color: rgba(255, 255, 255, 0.33);
 }
-header nav a{
-    color: rgba(255, 255, 255, 0.65);
-    margin-left: 20px;
-    float: right;
-    padding-top: 6px;
+.navbar-default {
+    background-color: rgba(248, 248, 248, 0.16);
+    color: white;
+    border-color: transparent;
 }
-header a:hover{
-	color: white;
-	text-decoration: none;
+header h6{
+	padding-top: 7px;
+	margin-left: 10px;
+}
+.navbar-default .navbar-nav>li>a:hover {
+    color: white;
+}
+
+@media (max-width: 768px){
+	.navbar-default {
+	    background-color: white;
+	    border-color: white;
+	}
+	header h6{
+		font-size: 1em;
+		font-weight: bold;
+		color: #F05F40;
+	}
+	.navbar-default .navbar-nav>li>a:hover {
+    	background-color: #F05F40;
+	}
 }
 
 /* Background-image section*/
@@ -30,10 +44,17 @@ header a:hover{
 	font-size: 2.5em;
 	color: white;
 	margin-top: 15%;
+	padding-left: 26%;
+	padding-right: 26%; 
 }
 .line{
     width: 30px; 
     border: 1.5px solid #F05F40;
+}
+.texto{
+	color: rgba(255, 255, 255, 0.95);
+	padding-right: 25%;
+	padding-left: 25%;
 }
 .image a{
 	display: block;
@@ -45,6 +66,21 @@ header a:hover{
 	border-radius: 30px;
 	text-decoration: none;
 	margin: 4%;
+}
+
+@media (max-width: 768px){
+	.texto{
+		color: rgba(255, 255, 255, 0.85);
+		font-size: 1.3em;
+		padding-left: 2%;
+		padding-right: 2%;
+	}
+	.entrada{
+		font-size: 2.6em;
+		margin-top: 25%;
+		padding-right: 5%;
+		padding-left: 5%;
+	}
 }
 
 /*Sobre Mí - Section*/
@@ -60,6 +96,20 @@ header a:hover{
 	width: 30px;
 	border: 1.5px solid white;
 }
+.text{
+	color: rgba(255, 255, 255, 0.85);
+	padding-right: 20%;
+	padding-left: 20%;
+}
+
+@media (max-width: 768px){
+	.text{
+		padding-left: 1%;
+		padding-right: 1%;
+		font-size: 1.2em;
+	}
+}
+
 /*Servicio - Section*/
 .servicio{
 	padding-top: 5%;
@@ -73,12 +123,23 @@ header a:hover{
 	color: black;
 	text-decoration: none;
 }
+.servicio .row{
+	padding-right: 4%;
+	padding-left: 4%;
+}
 .caja{
 	padding-right: 2%;
 	padding-left: 2%;
 }
 
-/*Fotos-Section*/
+@media (max-width: 768px){
+	.caja{
+		margin-top: 3%;
+		margin-bottom: 3%;
+	}
+}
+
+/*Trabajos-Section*/
 .fotos img{
 	width: 100%;
 	height: 100%;
@@ -86,8 +147,6 @@ header a:hover{
 .fotos .col-md-4{
 	padding: 0%;
 }
-
-/*Ver-Section*/
 .ver{
 	background-color: black;
 	color: white;
@@ -99,10 +158,12 @@ header a:hover{
 	height: 40px;
 	border-radius: 35px;
 	background-color: white;
-	color: black;
 	font-size: 10px;
 }
-
+.ver button a{
+	text-decoration: none;
+	color: black;
+}
 /*Footer*/
 footer{
 	text-align: center;
