--- a/css/creative.css
+++ b/css/creative.css
@@ -9,6 +9,9 @@ header{
     color: white;
     border-color: transparent;
 }
+.navbar-default .navbar-nav>li>a {
+    color: rgba(238, 238, 238, 0.75);
+}
 header h6{
 	padding-top: 7px;
 	margin-left: 10px;
@@ -17,7 +20,7 @@ header h6{
     color: white;
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px){
 	.navbar-default {
 	    background-color: white;
 	    border-color: white;
@@ -29,6 +32,9 @@ header h6{
 	}
 	.navbar-default .navbar-nav>li>a:hover {
     	background-color: #F05F40;
+	}
+	.navbar-default .navbar-nav>li>a {
+    	color: gray;
 	}
 }
 
@@ -68,10 +74,10 @@ header h6{
 	margin: 4%;
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px){
 	.texto{
 		color: rgba(255, 255, 255, 0.85);
-		font-size: 1.3em;
+		font-size: 1.2em;
 		padding-left: 2%;
 		padding-right: 2%;
 	}
@@ -80,6 +86,30 @@ header h6{
 		margin-top: 25%;
 		padding-right: 5%;
 		padding-left: 5%;
+	}
+	.image{
+		height: 85vh;
+	}
+	.image a{
+	width: 150px;
+	padding: 15px 25px;
+	font-size: 1em;
+	font-weight: bold;
+	}
+}
+
+@media (max-width: 480px){
+	.entrada{
+		font-size: 2em;
+		padding-right: 2%;
+		padding-left: 2%;
+		margin-top: 30%;
+	}
+	.texto{
+		font-size: 1em;
+	}
+	.image a{
+		margin: 10%;
 	}
 }
 
@@ -102,11 +132,12 @@ header h6{
 	padding-left: 20%;
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px){
 	.text{
-		padding-left: 1%;
-		padding-right: 1%;
-		font-size: 1.2em;
+		color: rgba(255, 255, 255, 0.80);
+		padding-left: 2%;
+		padding-right: 2%;
+		font-size: 1.1em;
 	}
 }
 
@@ -132,7 +163,7 @@ header h6{
 	padding-left: 2%;
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px){
 	.caja{
 		margin-top: 3%;
 		margin-bottom: 3%;
